--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ body {
     font-weight: bold;
 }
 
+#calculator {
+    margin-top: 70px;
+}
+
 /*Media Queries für responsives Design*/
 
 @media only screen and (max-width: 700px) {
