--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     width: "100%";
 }
 
-#headtext, .headcontainer {
+#headtext, .headcontainer, #mid {
     align-self: center;
 }
 
@@ -44,10 +44,31 @@ body {
 
 #mid {
     margin-top: 60px;
+    width: 610px;
 }
 
 #tables-2 {
     margin-top: 50px;
+}
+
+.innumber {
+    width: 30px;
+}
+
+input[type=number]{
+    width: 50px;
+    -moz-appearance: textfield;
+} 
+
+.resizable {
+    font-size: 1vw;
+}
+
+td {
+    padding-left: 4px;
+    padding-right: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 /*Media Queries für responsives Design*/
@@ -56,6 +77,17 @@ body {
     .headcontainer {
         width: 84vw;
         margin-top: 60px;
+    }
+    #lkc span, #gkc span {
+        visibility: hidden;
+        display: none;
+    }
+
+    #lkc:after {
+        content: 'LK';
+    }
+    #gkc:after {
+        content: "GK";
     }
 
     #headtext {
