--- a/style.css
+++ b/style.css
@@ -103,3 +103,19 @@ td {
     }
 
 }
+
+@media only screen and (max-width: 400px) {
+    table * {
+        font-size: 10px;
+        font-weight: 1000;
+    }
+
+    #mid {
+        width: 45px;
+    }
+
+    input[type=number]{
+        width: 28px;
+        -moz-appearance: textfield;
+    } 
+}
