--- a/style.css
+++ b/style.css
@@ -127,7 +127,11 @@ table, th, td {
     }
 
     #mid {
-        width: 45px;
+        width: 100%;
+        margin: 3px;
+        margin-top: 30px;
+        padding-left: 8px;
+        padding-right: 8px;
     }
 
     input[type=number]{
